--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Bian Li / A computational biology geek"
 title_separator          : "-"
 name                     : &name "Bian Li"
 description              : &description "A computational biology geek"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://computbiolgeek.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "computbiolgeek/computbiolgeek.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
